# django-gotify

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  runtests.py  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: django.yml  publish.yml
django_gotify/: __init__.py  apps.py  email.py  log.py  utils.py
django_gotify/management/commands/: check_gotify.py
tests/: test_backend.py  test_settings.py
