[metadata]
name = django-gotify
version = 0.1.0
description = A Django package to use Gotify as an email backend and logging handler.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/swayll/django-gotify/
author = Nikolay Fedorov
author_email = 40500428+swayll@users.noreply.github.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django>=3.2
    gotify>=0.5.0
